# sapient_trading

./: LICENSE  Module - Data Engineering.md  Module - Decision and Reasoning.md  Module - NLP and LLM Agents.md  Module - Platform and Ops.md  Trading_Suite_Sprint_and_Design.md  backlog.csv  pyproject.toml
.github/workflows/: ci.yml
agents/sentiment/: finbert_agent.py
decision/: aggregator_v0.py
docker/: Dockerfile
eval/: metrics.py  report.ipynb
exec/: alpaca_client.py  backtester.py
features/: daily.py
flows/: daily_run.py
github_wiki/: Module-Data-Engineering.md  Module-Execution-and-Evaluation.md  Sprint-0.md
ingestion/: ingest_fundamentals.py  ingest_market.py  ingest_news.py  normalize_text.py
tests/: test_features.py  test_ingestion.py
